samples/_failures_safe/1761155195_fb7f6d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a19873d7.c: In function ‘main’:
./samples/SAFE/__tmp_a19873d7.c:174:5: error: expected identifier or ‘(’ at end of input
  174 |     long
      |     ^~~~
./samples/SAFE/__tmp_a19873d7.c:174:5: error: expected declaration or statement at end of input
